@@ -61,8 +61,8 @@ function getContextFromRequest (req, conf, type) {
       conf.sanitizeFieldNamesRegExp
     )
 
-    // TODO: deprecate filterHttpHeaders in #3320 before next major release
-    // https://github.com/elastic/apm-agent-nodejs/issues/3320
+    // TODO: remove filterHttpHeaders option in next major release
+    // https://github.com/elastic/apm-agent-nodejs/issues/3332
     if (conf.filterHttpHeaders && context.headers.cookie) {
       context.cookies = cookie.parse(req.headers.cookie)
       context.cookies = redactKeysFromObject(context.cookies, conf.sanitizeFieldNamesRegExp)
