@@ -68,6 +68,9 @@ Notes:
 [float]
 ===== Chores
 
+* The config option <<filter-http-headers, filterHttpHeaders>> is now *deprecated*. It will be
+  removed in a future major version. ({pull}3333[#3333])
+
 * Add cookie map in transactions' request context and redact cookie header ({pull}3322[#3322])
 
 * Stop testing `express-graphql` instrumentation -- the module is deprecated.
